[gd_scene load_steps=112 format=3 uid="uid://dwdcl8ubfbkl4"]

[ext_resource type="Script" path="res://Scripts/animal.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/AudioRouter.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bvrmf2ave4myr" path="res://Scenes/MobAudioController.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://djwnvidenvfi0" path="res://Images/Cow.BrownSpotted.png" id="4"]
[ext_resource type="Texture2D" uid="uid://d38f7cnkjbngs" path="res://Images/Llama.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b1ulylxclir6a" path="res://Images/Unicorn.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b4v517tnvla6d" path="res://Images/Chicken.png" id="7"]
[ext_resource type="AudioStream" uid="uid://fjrqcefvukq4" path="res://Audio/Poo Farmer Chicken Screech.wav" id="8"]
[ext_resource type="AudioStream" uid="uid://brsanjyumx2at" path="res://Audio/Poo Farmer Chicken Poo 1.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://denajy5ctlg6j" path="res://Audio/Poo Farmer Chicken Poo 2.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://dyxmo8mi55l78" path="res://Audio/Poo Farmer Chicken Bok Bok.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://dwn1vqatcx7s7" path="res://Audio/Poo Farmer Chicken Bok.wav" id="12"]
[ext_resource type="AudioStream" uid="uid://bc0d0imuvv7b0" path="res://Audio/Poo Farmer Cow 1.wav" id="13"]
[ext_resource type="AudioStream" uid="uid://dn5ipxxd74e4x" path="res://Audio/Poo Farmer Cow 2.wav" id="14"]
[ext_resource type="AudioStream" uid="uid://cm3osojtxebg4" path="res://Audio/Poo Farmer Cow 3.wav" id="15"]
[ext_resource type="AudioStream" uid="uid://ckb75y3x2hi26" path="res://Audio/Poo Farmer Cow Poo 1.wav" id="16"]
[ext_resource type="AudioStream" uid="uid://brso3gc2nou7e" path="res://Audio/Poo Farmer Cow Poo 2.wav" id="17"]
[ext_resource type="AudioStream" uid="uid://c8m0jnw4ac3qy" path="res://Audio/Poo Farmer Goat 1.wav" id="18"]
[ext_resource type="AudioStream" uid="uid://bphlig1ihwreb" path="res://Audio/Poo Farmer Goat 2.wav" id="19"]
[ext_resource type="AudioStream" uid="uid://dsiwn07c3vtyd" path="res://Audio/Poo Farmer Goat 3.wav" id="20"]
[ext_resource type="AudioStream" uid="uid://bq5c3utrvy04n" path="res://Audio/Poo Farmer Med Animals Poo 1.wav" id="21"]
[ext_resource type="AudioStream" uid="uid://dn80sgmbi4ung" path="res://Audio/Poo Farmer Med Animals Poo 2.wav" id="22"]
[ext_resource type="AudioStream" uid="uid://cfufit3opfp2u" path="res://Audio/Poo Farmer Med Animals Poo 3.wav" id="23"]
[ext_resource type="AudioStream" uid="uid://cjlteyfsmweva" path="res://Audio/Poo Farmer Llama 1.wav" id="24"]
[ext_resource type="AudioStream" uid="uid://b3hmshcwnf0gb" path="res://Audio/Poo Farmer Llama 2.wav" id="25"]
[ext_resource type="AudioStream" uid="uid://cb5q0n5t3n0xf" path="res://Audio/Poo Farmer Llama 3.wav" id="26"]
[ext_resource type="AudioStream" uid="uid://dyxqgxsqs0uce" path="res://Audio/Poo Farmer Unicon 1.wav" id="27"]
[ext_resource type="AudioStream" uid="uid://ccyt21xi1fcrx" path="res://Audio/Poo Farmer Unicorn 2.wav" id="28"]
[ext_resource type="Texture2D" uid="uid://cgp3sfq48go5g" path="res://Images/Goat.png" id="29"]

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource("7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("7")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("7")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource("7")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource("7")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("7")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource("7")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource("7")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource("7")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource("7")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="47"]
atlas = ExtResource("7")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="48"]
atlas = ExtResource("7")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="49"]
atlas = ExtResource("7")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="50"]
atlas = ExtResource("7")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("4")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("4")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("4")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("4")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("4")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("4")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("4")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("4")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("4")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("4")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("4")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="75"]
atlas = ExtResource("29")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="76"]
atlas = ExtResource("29")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="77"]
atlas = ExtResource("29")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="78"]
atlas = ExtResource("29")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="79"]
atlas = ExtResource("29")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="80"]
atlas = ExtResource("29")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="81"]
atlas = ExtResource("29")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="82"]
atlas = ExtResource("29")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="83"]
atlas = ExtResource("29")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="84"]
atlas = ExtResource("29")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="85"]
atlas = ExtResource("29")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="86"]
atlas = ExtResource("29")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="87"]
atlas = ExtResource("29")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="88"]
atlas = ExtResource("29")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="89"]
atlas = ExtResource("29")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="90"]
atlas = ExtResource("29")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("5")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("5")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("5")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("5")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("5")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("5")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("5")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("5")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("5")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="59"]
atlas = ExtResource("6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="60"]
atlas = ExtResource("6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="61"]
atlas = ExtResource("6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="62"]
atlas = ExtResource("6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="63"]
atlas = ExtResource("6")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="64"]
atlas = ExtResource("6")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="65"]
atlas = ExtResource("6")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="66"]
atlas = ExtResource("6")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="67"]
atlas = ExtResource("6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="68"]
atlas = ExtResource("6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="69"]
atlas = ExtResource("6")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="70"]
atlas = ExtResource("6")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="71"]
atlas = ExtResource("6")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="72"]
atlas = ExtResource("6")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="73"]
atlas = ExtResource("6")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="74"]
atlas = ExtResource("6")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("35")
}, {
"duration": 1.0,
"texture": SubResource("36")
}, {
"duration": 1.0,
"texture": SubResource("37")
}, {
"duration": 1.0,
"texture": SubResource("38")
}],
"loop": true,
"name": &"Chicken - down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("39")
}, {
"duration": 1.0,
"texture": SubResource("40")
}, {
"duration": 1.0,
"texture": SubResource("41")
}, {
"duration": 1.0,
"texture": SubResource("42")
}],
"loop": true,
"name": &"Chicken - left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("43")
}, {
"duration": 1.0,
"texture": SubResource("44")
}, {
"duration": 1.0,
"texture": SubResource("45")
}, {
"duration": 1.0,
"texture": SubResource("46")
}],
"loop": true,
"name": &"Chicken - right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("47")
}, {
"duration": 1.0,
"texture": SubResource("48")
}, {
"duration": 1.0,
"texture": SubResource("49")
}, {
"duration": 1.0,
"texture": SubResource("50")
}],
"loop": true,
"name": &"Chicken - up",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}],
"loop": true,
"name": &"Cow - down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}],
"loop": true,
"name": &"Cow - left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}],
"loop": true,
"name": &"Cow - right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}, {
"duration": 1.0,
"texture": SubResource("17")
}, {
"duration": 1.0,
"texture": SubResource("18")
}],
"loop": true,
"name": &"Cow - up",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("75")
}, {
"duration": 1.0,
"texture": SubResource("76")
}, {
"duration": 1.0,
"texture": SubResource("77")
}, {
"duration": 1.0,
"texture": SubResource("78")
}],
"loop": true,
"name": &"Goat - down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("79")
}, {
"duration": 1.0,
"texture": SubResource("80")
}, {
"duration": 1.0,
"texture": SubResource("81")
}, {
"duration": 1.0,
"texture": SubResource("82")
}],
"loop": true,
"name": &"Goat - left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("83")
}, {
"duration": 1.0,
"texture": SubResource("84")
}, {
"duration": 1.0,
"texture": SubResource("85")
}, {
"duration": 1.0,
"texture": SubResource("86")
}],
"loop": true,
"name": &"Goat - right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("87")
}, {
"duration": 1.0,
"texture": SubResource("88")
}, {
"duration": 1.0,
"texture": SubResource("89")
}, {
"duration": 1.0,
"texture": SubResource("90")
}],
"loop": true,
"name": &"Goat - up",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("19")
}, {
"duration": 1.0,
"texture": SubResource("20")
}, {
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}],
"loop": true,
"name": &"Llama - down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("23")
}, {
"duration": 1.0,
"texture": SubResource("24")
}, {
"duration": 1.0,
"texture": SubResource("25")
}, {
"duration": 1.0,
"texture": SubResource("26")
}],
"loop": true,
"name": &"Llama - left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("27")
}, {
"duration": 1.0,
"texture": SubResource("28")
}, {
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("30")
}],
"loop": true,
"name": &"Llama - right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("31")
}, {
"duration": 1.0,
"texture": SubResource("32")
}, {
"duration": 1.0,
"texture": SubResource("33")
}, {
"duration": 1.0,
"texture": SubResource("34")
}],
"loop": true,
"name": &"Llama - up",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("59")
}, {
"duration": 1.0,
"texture": SubResource("60")
}, {
"duration": 1.0,
"texture": SubResource("61")
}, {
"duration": 1.0,
"texture": SubResource("62")
}],
"loop": true,
"name": &"Unicorn - down",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("63")
}, {
"duration": 1.0,
"texture": SubResource("64")
}, {
"duration": 1.0,
"texture": SubResource("65")
}, {
"duration": 1.0,
"texture": SubResource("66")
}],
"loop": true,
"name": &"Unicorn - left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("67")
}, {
"duration": 1.0,
"texture": SubResource("68")
}, {
"duration": 1.0,
"texture": SubResource("69")
}, {
"duration": 1.0,
"texture": SubResource("70")
}],
"loop": true,
"name": &"Unicorn - right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("71")
}, {
"duration": 1.0,
"texture": SubResource("72")
}, {
"duration": 1.0,
"texture": SubResource("73")
}, {
"duration": 1.0,
"texture": SubResource("74")
}],
"loop": true,
"name": &"Unicorn - up",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="1"]

[node name="Animal" type="CharacterBody2D" groups=["animal"]]
texture_filter = 1
scale = Vector2(1.5, 1.5)
collision_layer = 2
collision_mask = 4
script = ExtResource("1")
poo_timer_min = 1.0
poo_timer_max = 10.0
_type = 1

[node name="PooTimer" type="Timer" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("2")
animation = &"Chicken - down"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="AudioRouter" type="Node2D" parent="."]
script = ExtResource("2")

[node name="ChickenAudioController" parent="AudioRouter" instance=ExtResource("3")]
visible = true
next_behavior_min = 10.0
next_behavior_max = 60.0
enabled = false
actions = Array[AudioStream]([ExtResource("9"), ExtResource("10")])
behaviors = Array[AudioStream]([ExtResource("11"), ExtResource("12"), ExtResource("8")])

[node name="CowAudioController" parent="AudioRouter" instance=ExtResource("3")]
visible = true
next_behavior_min = 10.0
next_behavior_max = 60.0
enabled = false
actions = Array[AudioStream]([ExtResource("16"), ExtResource("17")])
behaviors = Array[AudioStream]([ExtResource("13"), ExtResource("14"), ExtResource("15")])

[node name="GoatAudioController" parent="AudioRouter" instance=ExtResource("3")]
visible = true
next_behavior_min = 5.0
next_behavior_max = 60.0
enabled = false
actions = Array[AudioStream]([ExtResource("21"), ExtResource("22"), ExtResource("23")])
behaviors = Array[AudioStream]([ExtResource("18"), ExtResource("19"), ExtResource("20")])

[node name="LlamaAudioController" parent="AudioRouter" instance=ExtResource("3")]
visible = true
next_behavior_min = 15.0
next_behavior_max = 60.0
enabled = false
actions = Array[AudioStream]([ExtResource("21"), ExtResource("22"), ExtResource("23")])
behaviors = Array[AudioStream]([ExtResource("24"), ExtResource("25"), ExtResource("26")])

[node name="UnicornAudioController" parent="AudioRouter" instance=ExtResource("3")]
visible = true
next_behavior_min = 5.0
next_behavior_max = 80.0
enabled = false
actions = Array[AudioStream]([ExtResource("21"), ExtResource("22"), ExtResource("23")])
behaviors = Array[AudioStream]([ExtResource("27"), ExtResource("28")])

[node name="ChangeDestinationTimer" type="Timer" parent="."]

[connection signal="action_enacted" from="." to="AudioRouter" method="_on_Animal_action_enacted"]
[connection signal="timeout" from="PooTimer" to="." method="do_poo"]
[connection signal="timeout" from="ChangeDestinationTimer" to="." method="_on_ChangeDestinationTimer_timeout"]
